# Lenticularis

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  AI_INSTRUCTIONS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  README.md  config.yaml.example  config.yml.example  docker-compose.dev.yml  docker-compose.yml  init_db.py  main.py  plan-lenticularisStructure.prompt.md  pyproject.toml  readme.md  requirements.txt  seed_stations.py  test_collectors.py
.ai/context/: architecture.md  features.md  flutter-app-plan.md  forecast-analysis-wip.md  lsmfapi-thermal-grid.md  replay-playback.md
.ai/instructions/: 00-ai-usage.md  01-project-overview.md  02-backend-conventions.md  03-frontend-conventions.md  04-constraints.md  06-testing-conventions.md  07-api-conventions.md  08-operability.md
.ai/prompts/: add-api-router.md  add-collector.md  add-i18n-keys.md  add-sqlite-table.md  (+3 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
_ai-starter/: CLAUDE.md  README.md
app/: __init__.py  main.py
collectors/: __init__.py  base.py
scripts/: remote.ps1
static/: admin.html  app.js  auth.js  bootstrap.js  foehn.html  forecast-accuracy.html  forecast-accuracy.js  forecast-analysis.html  forecast-analysis.js  help.html  i18n.js  index.html  login.html  map.js  oauth-callback.html  org-dashboard.html  register.html  replay.js  ruleset-analysis.html  ruleset-editor.html  rulesets.html  shared.css  station-detail.html  station-detail.js  stations.html  stats.html  wind-forecast.html
(+131 files in other folders)
